# api_gateway/api/docs/swagger.yaml
@@ -29,6 +29,8 @@ definitions:
         type: integer
       last_name:
         type: string
+      password:
+        type: string
       phone_number:
         type: string
     type: object
@@ -40,11 +42,15 @@ definitions:
         type: array
       bio:
         type: string
+      code:
+        type: string
       email:
         type: string
       first_name:
         type: string
       last_name:
+        type: string
+      password:
         type: string
       phone_number:
         type: string
@@ -65,6 +71,8 @@ definitions:
         type: integer
       last_name:
         type: string
+      password:
+        type: string
       phone_number:
         type: string
     type: object
@@ -74,6 +82,31 @@ definitions:
         items:
           $ref: '#/definitions/customer.Customer'
         type: array
+    type: object
+  models.CustomerRegister:
+    properties:
+      bio:
+        type: string
+      code:
+        type: string
+      email:
+        type: string
+      firstName:
+        type: string
+      lastName:
+        type: string
+      password:
+        type: string
+      phoneNumber:
+        type: string
+    type: object
+  models.Error:
+    properties:
+      code:
+        type: integer
+      description:
+        type: string
+      error: {}
     type: object
   post.GetPostResp:
     properties:
@@ -279,6 +312,32 @@ paths:
         "400":
           description: ErrorResponse
       summary: deletes customer
+      tags:
+      - Customer
+  /v1/customer/register:
+    post:
+      consumes:
+      - application/json
+      description: registers customer
+      parameters:
+      - description: Register customer
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.CustomerRegister'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Error'
+      summary: registeration customer
       tags:
       - Customer
   /v1/customer/update:
