# api_gateway/api/handlers/models/customer.go
@@ -1,9 +1,0 @@
-package models
-
-type Customer struct {
-	FirstName   string
-	LastName    string
-	Bio         string
-	Email       string
-	PhoneNumber string
-}
